[gd_scene load_steps=2 format=3 uid="uid://dmpwv1uxml8fv"]

[ext_resource type="Script" path="res://scenes/ui/spot_info_training.gd" id="1_ayjml"]

[node name="SpotInfoTraining" type="HBoxContainer"]
script = ExtResource("1_ayjml")

[node name="InfoColumn" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="InfoColumn"]
unique_name_in_owner = true
layout_mode = 2
text = "Leek Crops"

[node name="GoldPriceLabel" type="Label" parent="InfoColumn"]
layout_mode = 2
text = "Gold Price:"

[node name="GoldPriceValue" type="Label" parent="InfoColumn"]
unique_name_in_owner = true
layout_mode = 2
text = "  X per level"

[node name="SlotsColumn" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SlotsLabel" type="Label" parent="SlotsColumn"]
layout_mode = 2
text = "Slots"

[node name="SlotsContainer" type="HBoxContainer" parent="SlotsColumn"]
unique_name_in_owner = true
layout_mode = 2
